force-app/main/default/objects/HRCSVC_Custom_Work_Order_History__c/HRCSVC_Custom_Work_Order_History__c.object-meta.xml
<CustomObject>
    <label>Custom Work Order History</label>
    <nameField>
        <displayFormat>WOH-{0}</displayFormat>
        <label>Custom Work Order History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Work Order History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>