force-app/main/default/objects/HRCSVC_Custom_Work_Order_History__c/fields/HRCSVC_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Work_Order_History</relationshipName>
    <type>Lookup</type>
</CustomField>