force-app/main/default/objects/HRCSVC_Custom_Work_Order_History__c/fields/HRCSVC_Changed_On__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Changed_On__c</fullName>
    <label>Changed On</label>
    <type>DateTime</type>
</CustomField>