force-app/main/default/objects/HRCSVC_Custom_Work_Order_History__c/fields/HRCSVC_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Label__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>