force-app/main/default/objects/HRCSVC_Custom_Work_Order_History__c/fields/HRCSVC_New_Value__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_New_Value__c</fullName>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>