force-app/main/default/objects/HRCSVC_Custom_Work_Order_History__c/fields/HRCSVC_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Prior_Value__c</fullName>
    <label>Prior Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>