force-app/main/default/objects/HRCSVC_Custom_Work_Order_History__c/fields/HRCSVC_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Custom Work Order History</relationshipLabel>
    <relationshipName>Custom_Work_Order_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>